--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/data/raw_data/
+/data/numpy_data/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/nfrl.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
+/.idea/.gitignore
