Win probability finished.

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,8 @@ dmypy.json
 /data/play_pics/
 /data/play_pics/
 /data/autoencoder/
+/to_delete_last/
+/data/clustering/
+/data/clustering/
+/data/clustering/
+/data/win_probability/
